# QRtrack

./: .gitignore  CMakeLists.txt  README.md
calibration/: calibrate_camera.launch
config/: camera_parameters.yaml  camera_parameters_lifecam1.yaml
scripts/: build.sh  generate_aruco_markers.sh
src/: detect_aruco_markers.cpp  detect_aruco_markers_homography.cpp  detect_aruco_markers_with_reference.cpp  generate_aruco_markers.cpp
